k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: olp
  labels:
    app: online-learning-platform
